LabSoftSis/laboratorioPractica3/obj/Debug/net8.0/SICXEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/espin/OneDrive/Desktop/Fundamentos software de sistemas/Labo/laboratorioPractica3/laboratorioPractica3/grammar/SICXE.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SICXEParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ADDF=1, ADDR=2, ADD=3, AND=4, CLEAR=5, COMPF=6, COMPR=7, COMP=8, DIVF=9, 
		DIVR=10, DIV=11, FIX=12, FLOAT=13, HIO=14, JEQ=15, JGT=16, JLT=17, JSUB=18, 
		J=19, LDCH=20, LDA=21, LDB=22, LDF=23, LDL=24, LDS=25, LDT=26, LDX=27, 
		LPS=28, MULF=29, MULR=30, MUL=31, NORM=32, OR=33, RD=34, RMO=35, RSUB=36, 
		SHIFTL=37, SHIFTR=38, SIO=39, SSK=40, STCH=41, STSW=42, STA=43, STB=44, 
		STF=45, STI=46, STL=47, STS=48, STT=49, STX=50, SUBF=51, SUBR=52, SUB=53, 
		SVC=54, TD=55, TIO=56, TIXR=57, TIX=58, WD=59, START=60, END=61, BYTE=62, 
		WORD=63, RESB=64, RESW=65, BASE=66, NOBASE=67, EQU=68, ORG=69, LTORG=70, 
		USE=71, EXTDEF=72, EXTREF=73, CSECT=74, FORMAT4_PREFIX=75, PREFIX_INDIRECT=76, 
		PREFIX_IMMEDIATE=77, COMMA=78, STAR=79, LITERAL_HEX=80, LITERAL_CHAR=81, 
		LITERAL_NUM=82, HEXCONST=83, CHARCONST=84, NUMBER=85, IDENT=86, COMMENT=87, 
		NEWLINE=88, WS=89;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_label = 3, RULE_operation = 4, 
		RULE_format1Instruction = 5, RULE_format2Instruction = 6, RULE_format34Instruction = 7, 
		RULE_instruction = 8, RULE_directive = 9, RULE_operand = 10, RULE_operandExpr = 11, 
		RULE_indexing = 12, RULE_operandValue = 13, RULE_literal = 14, RULE_comment = 15;
	public static readonly string[] ruleNames = {
		"program", "line", "statement", "label", "operation", "format1Instruction", 
		"format2Instruction", "format34Instruction", "instruction", "directive", 
		"operand", "operandExpr", "indexing", "operandValue", "literal", "comment"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "'+'", "'@'", "'#'", "','", "'*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ADDF", "ADDR", "ADD", "AND", "CLEAR", "COMPF", "COMPR", "COMP", 
		"DIVF", "DIVR", "DIV", "FIX", "FLOAT", "HIO", "JEQ", "JGT", "JLT", "JSUB", 
		"J", "LDCH", "LDA", "LDB", "LDF", "LDL", "LDS", "LDT", "LDX", "LPS", "MULF", 
		"MULR", "MUL", "NORM", "OR", "RD", "RMO", "RSUB", "SHIFTL", "SHIFTR", 
		"SIO", "SSK", "STCH", "STSW", "STA", "STB", "STF", "STI", "STL", "STS", 
		"STT", "STX", "SUBF", "SUBR", "SUB", "SVC", "TD", "TIO", "TIXR", "TIX", 
		"WD", "START", "END", "BYTE", "WORD", "RESB", "RESW", "BASE", "NOBASE", 
		"EQU", "ORG", "LTORG", "USE", "EXTDEF", "EXTREF", "CSECT", "FORMAT4_PREFIX", 
		"PREFIX_INDIRECT", "PREFIX_IMMEDIATE", "COMMA", "STAR", "LITERAL_HEX", 
		"LITERAL_CHAR", "LITERAL_NUM", "HEXCONST", "CHARCONST", "NUMBER", "IDENT", 
		"COMMENT", "NEWLINE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SICXE.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SICXEParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SICXEParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SICXEParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SICXEParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -2L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 29364223L) != 0)) {
				{
				{
				State = 32;
				line();
				}
				}
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 38;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(SICXEParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SICXEParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 53;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 40;
				statement();
				State = 41;
				Match(NEWLINE);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 43;
				statement();
				State = 44;
				Match(Eof);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 46;
				comment();
				State = 47;
				Match(NEWLINE);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 49;
				comment();
				State = 50;
				Match(Eof);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 52;
				Match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperationContext operation() {
			return GetRuleContext<OperationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 55;
				label();
				}
			}

			State = 58;
			operation();
			State = 60;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((((_la - 76)) & ~0x3f) == 0 && ((1L << (_la - 76)) & 2043L) != 0)) {
				{
				State = 59;
				operand();
				}
			}

			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMENT) {
				{
				State = 62;
				comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(SICXEParser.IDENT, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(Context, State);
		EnterRule(_localctx, 6, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FORMAT4_PREFIX() { return GetToken(SICXEParser.FORMAT4_PREFIX, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext directive() {
			return GetRuleContext<DirectiveContext>(0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationContext operation() {
		OperationContext _localctx = new OperationContext(Context, State);
		EnterRule(_localctx, 8, RULE_operation);
		int _la;
		try {
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ADDF:
			case ADDR:
			case ADD:
			case AND:
			case CLEAR:
			case COMPF:
			case COMPR:
			case COMP:
			case DIVF:
			case DIVR:
			case DIV:
			case FIX:
			case FLOAT:
			case HIO:
			case JEQ:
			case JGT:
			case JLT:
			case JSUB:
			case J:
			case LDCH:
			case LDA:
			case LDB:
			case LDF:
			case LDL:
			case LDS:
			case LDT:
			case LDX:
			case LPS:
			case MULF:
			case MULR:
			case MUL:
			case NORM:
			case OR:
			case RD:
			case RMO:
			case RSUB:
			case SHIFTL:
			case SHIFTR:
			case SIO:
			case SSK:
			case STCH:
			case STSW:
			case STA:
			case STB:
			case STF:
			case STI:
			case STL:
			case STS:
			case STT:
			case STX:
			case SUBF:
			case SUBR:
			case SUB:
			case SVC:
			case TD:
			case TIO:
			case TIXR:
			case TIX:
			case WD:
			case FORMAT4_PREFIX:
				EnterOuterAlt(_localctx, 1);
				{
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==FORMAT4_PREFIX) {
					{
					State = 67;
					Match(FORMAT4_PREFIX);
					}
				}

				State = 70;
				instruction();
				}
				break;
			case START:
			case END:
			case BYTE:
			case WORD:
			case RESB:
			case RESW:
			case BASE:
			case NOBASE:
			case EQU:
			case ORG:
			case LTORG:
			case USE:
			case EXTDEF:
			case EXTREF:
			case CSECT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 71;
				directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Format1InstructionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FIX() { return GetToken(SICXEParser.FIX, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(SICXEParser.FLOAT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HIO() { return GetToken(SICXEParser.HIO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NORM() { return GetToken(SICXEParser.NORM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIO() { return GetToken(SICXEParser.SIO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIO() { return GetToken(SICXEParser.TIO, 0); }
		public Format1InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_format1Instruction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterFormat1Instruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitFormat1Instruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormat1Instruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Format1InstructionContext format1Instruction() {
		Format1InstructionContext _localctx = new Format1InstructionContext(Context, State);
		EnterRule(_localctx, 10, RULE_format1Instruction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 72058148088737792L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Format2InstructionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADDR() { return GetToken(SICXEParser.ADDR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLEAR() { return GetToken(SICXEParser.CLEAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMPR() { return GetToken(SICXEParser.COMPR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIVR() { return GetToken(SICXEParser.DIVR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MULR() { return GetToken(SICXEParser.MULR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RMO() { return GetToken(SICXEParser.RMO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHIFTL() { return GetToken(SICXEParser.SHIFTL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHIFTR() { return GetToken(SICXEParser.SHIFTR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUBR() { return GetToken(SICXEParser.SUBR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SVC() { return GetToken(SICXEParser.SVC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIXR() { return GetToken(SICXEParser.TIXR, 0); }
		public Format2InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_format2Instruction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterFormat2Instruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitFormat2Instruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormat2Instruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Format2InstructionContext format2Instruction() {
		Format2InstructionContext _localctx = new Format2InstructionContext(Context, State);
		EnterRule(_localctx, 12, RULE_format2Instruction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 166633633963050148L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
